5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4428/executions/1595_2895.log
== TEST (2019-03-26 02:15:30) 
-- CODE:
var1 = float(input("Quantidade de jogos encomendados: "))
var2 = float(input("Valor unitario do jogo: "))
var3 = float(input("Valor do frete: "))
var4 = float(input("Preco Total: ", var2*var1+var3)



-- ERROR:
File "XXXX", line 7
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 02:16:22) 
-- CODE:
var1 = float(input("Quantidade de jogos encomendados: "))
var2 = float(input("Valor unitario do jogo: "))
var3 = float(input("Valor do frete: "))
var4 = float(input("Preco Total: ", var2*var1+var3)
print(var4)

-- ERROR:
File "XXXX", line 5
    print(var4)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 02:18:51) 
-- CODE:
var1 = float(input("Quantidade de jogos encomendados: "))
var2 = float(input("Valor unitario do jogo: "))
var3 = float(input("Valor do frete: "))
preco_total(var1*var2+var3)
print(preco_total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    preco_total(var1*var2+var3)
NameError: name 'preco_total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 02:19:25) 
-- CODE:
var1 = float(input("Quantidade de jogos encomendados: "))
var2 = float(input("Valor unitario do jogo: "))
var3 = float(input("Valor do frete: "))
preco_total = (var1*var2+var3)
print(preco_total)

-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 02:30:10) 
-- CODE:
var1 = float(input("Quantidade de jogos encomendados: "))
var2 = float(input("Valor unitario do jogo: "))
var3 = float(input("Valor do frete: "))
preco_total = (var1*var2+var3)
print(preco_total)

-- EXECUTION TIME:
0.187153
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
